--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -72,7 +72,7 @@ changer:
 				<div class="product-item__wrap">
 					{% for i in range(0, 10) %}
 						{{ item.productItem() }}
-					{% endfor %}﻿
+					{% endfor %}
 				</div>
 				<!-- end product-item -->
 
