--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -16,7 +16,7 @@ wrapperClass: page-cart
 		</div>
 
 		<!-- begin cart__wrap -->
-		<div class="cart__wrap" style="display: none;">
+		<div class="cart__wrap">
 
 			<div class="cart__items">
 				{% for i in range(0, 2) %}
@@ -89,12 +89,12 @@ wrapperClass: page-cart
 		</div>
 		<!-- end cart__wrap -->
 
-		<!-- begin cart__empty -->
-		<div class="cart__empty">
+		<!-- begin empty -->
+		<div class="empty"  style="display: none;">
 			<p>Ваша корзина пуста.</p>
 			<a href="#" class="button button--transparent button--info card__btn--back">Вернуться к покупкам</a>
 		</div>
-		<!-- end cart__empty -->
+		<!-- end empty -->
 
 	</div>
 
