--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -75,7 +75,7 @@ wrapperClass: page-cart
 						</div>
 					</div>
 				</div>
-				{% endfor %}﻿
+				{% endfor %}
 			</div>
 
 			<div class="cart__box">
