--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -63,7 +63,7 @@ changer:
 								<div class="changer__reset"><i class="fal fa-times"></i></div>
 							</a>
 						</li>
-						{% endfor %}﻿
+						{% endfor %}
 					</ul>
 				</div>
 				<!-- end catalog__changer -->
