--- a/src/templates/lk-favorits.html
+++ b/src/templates/lk-favorits.html
@@ -18,7 +18,7 @@ wrapperClass: page-lk
             {{ item.lkSidebar() }}
 
             <!-- begin lk__content -->
-            <div class="lk__content">
+            <div class="lk__content stiky-content">
 
                 <!-- begin product-item -->
                 <div class="product-item__wrap">
