--- a/src/templates/lk-order.html
+++ b/src/templates/lk-order.html
@@ -19,7 +19,7 @@ wrapperClass: page-lk
 			{{ item.lkSidebar() }}
 
 			<!-- begin lk__content -->
-			<div class="lk__content">
+			<div class="lk__content stiky-content">
 				
 				<div class="user-order">
 					<div class="accordeon lk__accordeon js-accordeon">
