--- a/src/templates/popups.html
+++ b/src/templates/popups.html
@@ -26,6 +26,7 @@ headerClass: bg--dark
 
 			<a href="#auth-form" data-toggle="modal">Регистрация</a>
 			<a href="#change-city" data-toggle="modal">Выбор города</a>
+			<a href="#logout" data-toggle="modal">Выход</a>
 
 		</div>
 
