--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -41,25 +41,23 @@ input, textarea, select {
 
 /*
  * disable auto-zoom on iphone input field focus 
- * http://www.456bereastreet.com/archive/201212/ios_webkit_browsers_and_auto-zooming_form_controls/
 */
-input[type='text']:focus,
-input[type='number']:focus,
-textarea:focus {
-	// font-size: 16px;
-}
+// input[type='text']:focus,
+// input[type='number']:focus,
+// textarea:focus {
+// 	// font-size: 16px;
+// 	@media screen and (-webkit-min-device-pixel-ratio:0) {
+// 		select:focus,
+// 		textarea:focus,
+// 		input:focus {
+// 			font-size: 16px;
+// 		}
+// 	}
+// }
 
-/* disable auto-zoom on iphone input field focus */
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-	select:focus,
-	textarea:focus,
-	input:focus {
-		font-size: 16px;
-	}
-}
 
 input[type="num"], input[type="number"], input[type="tel"], input[type="time"], input[type="date"]{
-	font-family: oswald-500, sans-serif;
+	font-family: $f2-bold;
 	letter-spacing: .5px;
 	appearance: none;
 	-webkit-appearance: none;
@@ -70,9 +68,7 @@ input[type="num"], input[type="number"], input[type="tel"], input[type="time"], 
 	}
 }
 
-select{
-	width: 100%;
-}
+select{width: 100%;}
 
 //HELPER CLASSES
 .is-hidden{display: none !important;}
