--- a/src/sass/pages/_lk.scss
+++ b/src/sass/pages/_lk.scss
@@ -1,16 +1,16 @@
-.page-lk{}//.page-lk
+.page-lk {}//.page-lk
 
-.lk{
+.lk {
 
-	&__wrap{
-		padding: $gutter*2.5 0;
+	&__wrap {
+		margin: $gutter*2.5 0;
 		@extend %flex;
-		@include respond-to(xs) {
-			padding: 30px 0;
+		@include respond-to(sm) {
+			margin: 30px 0;
 		}
 	}//.lk__wrap
 
-	&__sidebar{
+	&__sidebar {
 		width: 300px;
 		margin-right: 30px;
 		@include respond-to(md) {
@@ -21,11 +21,9 @@
 		}
 	}//.lk__sidebar
 
-	&__content{
-		flex: 1;
-	}//.lk__content
+	&__content {flex: 1;}//.lk__content
 
-	&__nav{}//.lk__nav
+	&__nav {}//.lk__nav
 
 	&__empty {
 		margin-left: -330px;
@@ -37,6 +35,31 @@
 			margin-left: 0;
 		}
 	}//.lk__empty
+
+	&__form {
+		max-width: 425px;
+		margin-left: 55px;
+		@include respond-to(md) {
+			margin-left: 80px;
+		}
+		@include respond-to(sm) {
+			margin: 0 auto;
+		}
+		.form {
+			&__box {
+				width: 100%;
+				margin-bottom: 0;
+				flex-direction: column;
+				& + & {margin-top: 20px;}
+			}
+			&__input {width: 100%;}
+			&__btn{
+				height: 43px;
+				line-height: 42px;
+				font-size: 16px;
+			}
+		}
+	}//.lk__form
 }//.lk
 
 .lk-nav{
@@ -111,9 +134,7 @@
 	&__box{
 		@extend %flexColumn;
 
-		&--last{
-			text-align: right;
-		}
+		&--last{text-align: right;}
 	}//.user-order__box
 
 	&__num{
@@ -124,9 +145,7 @@
 		}
 	}//.user-order__num
 
-	&__date{
-		font-size: 14px;
-	}//.user-order__date
+	&__date{font-size: 14px;}//.user-order__date
 
 	&__sum{
 		font-family: $f2-bold;
@@ -239,9 +258,7 @@
 		}
 	}//.user-order-item__img
 
-	&__title {
-		font-size: 14px;
-	}//.user-order-item__title
+	&__title {font-size: 14px;}//.user-order-item__title
 
 	&__type {
 		display: block;
