--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -129,7 +129,7 @@ productDesc:
 				<!-- end item-select -->
 				
 				<div class="button-box">
-					<button class="button button--yellow card__btn card__btn--cart">
+					<button class="button button--yellow card__btn card__btn--cart" onClick= "pushUp();">
 						Добавить в корзину
 						<span></span>
 					</button>
