--- a/src/templates/cart-order.html
+++ b/src/templates/cart-order.html
@@ -42,7 +42,7 @@ wrapperClass: page-cart
 						<div class="form__box form__box--wide">
 							<div class="input form__input">
 								<input 
-								type='phone'
+								type='tel'
 								class="input__field js-phone-mask"
 								placeholder="Телефон">
 								<span class="input__error">*Какая-то ошибочка вышла</span>
@@ -93,13 +93,7 @@ wrapperClass: page-cart
 							</div>
 						</div>
 
-					</div>						
-
-					<div class="form-success">
-						<div class="form-success__center">
-							<h3 class="form-success__title">Спасибо за регистрацию!</h3>
-						</div>
-					</div>
+					</div>		
 
 					<div class="policy cart__policy">
 						{{ item.checkbox('Я соглалашаюсь', 'form__checkbox') }}
