--- a/src/templates/partials/_items.html
+++ b/src/templates/partials/_items.html
@@ -116,7 +116,7 @@
 				</ul>
 			</div>
 
-			<button class="button button--transparent button--muted product-item__btn">Добавить в корзину</button>
+			<button class="button button--transparent button--muted product-item__btn" onClick= "pushUp();">Добавить в корзину</button>
 
 			<button class="button button--transparent button--default product-item__btn">Подробнее</button>
 
@@ -156,26 +156,26 @@
 
 {% macro lkSidebar(class) %}
 <!-- begin lk__sidebar -->
-<sidebar class="lk__sidebar">
-	<nav class="lk-nav lk__nav">
+<sidebar class="lk__sidebar js-stiky-block">
+	<nav class="lk-nav lk__nav stiky-block__inner">
 		<ul class="lk-nav__list">
 			<li class="lk-nav__item">
-				<a href="#" class="lk-nav__link lk-nav__link--order">
+				<a href="lk-order.html" class="lk-nav__link lk-nav__link--order">
 					Заказы
 				</a>
 			</li>
 			<li class="lk-nav__item">
-				<a href="#" class="lk-nav__link lk-nav__link--fav">
+				<a href="lk-favorits.html" class="lk-nav__link lk-nav__link--fav">
 					Избранное
 				</a>
 			</li>
 			<li class="lk-nav__item">
-				<a href="#" class="lk-nav__link lk-nav__link--data">
+				<a href="lk-data.html" class="lk-nav__link lk-nav__link--data">
 					Личные данные
 				</a>
 			</li>
 			<li class="lk-nav__item">
-				<a href="#" class="lk-nav__link lk-nav__link--exit">
+				<a href="javascript:void(0)"  data-toggle="modal" class="lk-nav__link lk-nav__link--exit">
 					Выйти
 				</a>
 			</li>
