--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -3,7 +3,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title">Modal title</h5>
-				<button type="button modal__btn--close" class="close" data-dismiss="modal" aria-label="Close">
+				<button type="button  modal__btn modal__btn--close" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
@@ -22,7 +22,7 @@
 <div class="modal fade" id="auth-form">
 	<div class="modal-dialog modal-dialog--sm" role="document">
 		<div class="modal-content">
-		<button class="close modal__btn--close" data-dismiss="modal" aria-label="Close">
+		<button class="close modal__btn modal__btn--close" data-dismiss="modal" aria-label="Close">
 			<span aria-hidden="true">&times;</span>
 		</button>
 			<div class="modal-body">
@@ -86,7 +86,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title">Выберите город</h5>
-				<button class="close modal__btn--close" data-dismiss="modal" aria-label="Close">
+				<button class="close modal__btn modal__btn--close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
@@ -110,3 +110,25 @@
 	</div>
 </div>
 <!-- end change-city -->
+
+<!-- begin logout -->
+<div class="modal fade logout" id="logout">
+	<div class="modal-dialog modal-dialog--sm">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Хотите выйте?</h5>
+				<button class="close modal__btn modal__btn--close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<div class="logout__question">Вы уверены, что хотите выйти?</div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="button button--mute modal__btn modal__btn--cancel" data-dismiss="modal">Отмена</button>
+				<button type="button" class="button button--default modal__btn modal__btn--confirm">Выйти</button>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- end logout -->
