--- a/src/templates/partials/_items.html
+++ b/src/templates/partials/_items.html
@@ -116,7 +116,7 @@
 				</ul>
 			</div>
 
-			<button class="button button--transparent button--muted product-item__btn" onClick= "pushUp();">Добавить в корзину</button>
+			<button class="button button--transparent button--muted product-item__btn" onclick= "pushUp();">Добавить в корзину</button>
 
 			<button class="button button--transparent button--default product-item__btn">Подробнее</button>
 
