--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,19 +1,19 @@
-.page-home{
-	.header{
+.page-home {
+	.header {
 		border-bottom: 0;
 	}
 }//.page-home
 
-.promo{margin-top: 10px;}//.promo
+.promo {margin-top: 10px;}//.promo
 
-.advantages{
+.advantages {
 	padding-top: 0;
 	
 	@include respond-to(xs) {
 		padding-bottom: 10px;
 	}
 
-	.h2{
+	.h2 {
 		margin: 70px 0 60px;
 		@include respond-to(xs) {
 			margin: 50px 0 50px;
@@ -21,7 +21,7 @@
 	}
 }//.advantages
 
-.advantages-item{
+.advantages-item {
 	margin-bottom: $base-indent*2;
 	@extend %flexCenter;
 
@@ -38,7 +38,7 @@
 		justify-content: flex-start;
 	}
 
-	&__wrap{
+	&__wrap {
 		@include row-flex;
 		
 		@include respond-to(sm) {
@@ -47,7 +47,7 @@
 		}
 	}//.advantages-item__wrap
 
-	&__icon{
+	&__icon {
 		width: 90px;
 		height: 90px;
 		margin-right: $gutter;
@@ -67,17 +67,15 @@
 		}
 	}//.advantages-item__icon
 
-	&__img{
+	&__img {
 		width: 70px;
 		height: 70px;
 		margin: auto;
 	}//.advantages-item__img
 
-	&__desc{
-		@extend %flexColumn;
-	}//.advantages-item__desc
+	&__desc {@extend %flexColumn;}//.advantages-item__desc
 
-	&__num{
+	&__num {
 		font-family: $f2-bold;
 		font-size: 25px;
 		line-height: 1.2;
@@ -87,7 +85,7 @@
 		}
 	}//.advantages-item__num
 
-	&__text{font-size: 16px;}//.advantages-item__text	
+	&__text {font-size: 16px;}//.advantages-item__text	
 }//.advantages-item
 
 .new{
@@ -97,7 +95,7 @@
 		padding: 0;
 	}
 
-	&__item{
+	&__item {
 		display: block;
 		height: 100%;
 		overflow: hidden;
@@ -113,12 +111,12 @@
 		}
 	}//.new__item
 
-	&__img{
+	&__img {
 		transform: scale(1);
 		@include tr;
 	}//.new__img
 
-	&__title{
+	&__title {
 		padding: 7px 15px;
 		font-size: 17px;
 		color: #fff;
@@ -140,7 +138,7 @@
 		}
 	}//.new__title
 
-	&__order{
+	&__order {
 		padding: 10px 30px;
 		font-size: 14px;
 		text-transform: uppercase;
@@ -157,7 +155,7 @@
 		}
 	}//.new__order
 
-	&__bage{
+	&__bage {
 		padding: 5px 15px;
 		font-size: 14px;
 		text-transform: uppercase;
@@ -179,7 +177,7 @@
 		margin-top: 0;
 	}
 	
-	&-in{
+	&-in {
 		min-height: 550px;
 		max-height: 610px;
 		@include row-flex;
@@ -190,7 +188,7 @@
 		}
 	}
 
-	&-col{
+	&-col {
 		@include respond-to(xs) {
 			margin-top: $gutter/2;
 		}
@@ -218,19 +216,19 @@
 		}	
 	}
 
-	&-col-3{
+	&-col-3 {
 		@include col;
 		@include size(4);
 		@include size-xs(12);
 	}
 
-	&-col-2{
+	&-col-2 {
 		@include col;
 		@include size(8);
 		@include size-xs(12);
 	}
 
-	&-row{
+	&-row {
 		height: 100%;
 		min-height: 210px;
 		overflow: hidden;
@@ -264,7 +262,7 @@
 		}
 	}
 
-	img{height: 100%;}
+	img {height: 100%;}
 }//.bz-grid
 
 .why-we{
@@ -275,7 +273,7 @@
 		padding-top: 30px;
 	}
 
-	&__title{
+	&__title {
 		display: block;
 		margin-bottom: $base-indent/2;
 		font-family: $f2-bold;
