--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -60,6 +60,7 @@ wrapperClass: page-cart
 										</div>
 									</div>
 								</div>
+								<span class="item-select__error">Кол-во не выбрано!</span>
 							</div>
 							<!-- end item-select -->
 
@@ -80,25 +81,111 @@ wrapperClass: page-cart
 
 			<div class="cart__box">
 				<div class="cart__sum">
-					<div class="cart__sum_sale">Сумма скидки: <span>10533,75 руб.</span></div>
-					<div class="cart__sum_current">Итого к оплате: <span>33641,25 руб.</span></div>
+					<div class="cart__sum_sale xs-only">В корзине: <span>2</span> <small>товара</small></div>
+					<div class="cart__sum_sale">Сумма скидки: <span>10533,75 </span>  <small>руб.</small></div>
+					<div class="cart__sum_current">Итого к оплате: <span>33641,25</span>   <small>руб.</small></div>
 				</div>
-				<button class="button button--default cart__btn">Продолжить</button>
-			</div>
+			</div>		
+
+			<!-- begin cart__form --> 
+			<div class="cart__form">
+	
+				<div class="section-header">
+					<h2 class="h1">Оформление заказа</h2>
+				</div>
+				
+					<form class="form">
+						<div class="form__inner">
+							
+								<div class="input form__input">
+									<input 
+									type='text'
+									class="input__field"
+									placeholder="Имя">
+									<span class="input__error">*Какая-то ошибочка вышла</span>
+								</div>
+	
+								<div class="input form__input">
+									<input 
+									type='text'
+									class="input__field"
+									placeholder="Фамилия">
+									<span class="input__error">*Какая-то ошибочка вышла</span>
+								</div>
+							
+								<div class="input form__input">
+									<input 
+									type='tel'
+									class="input__field js-phone-mask"
+									placeholder="Телефон">
+									<span class="input__error">*Какая-то ошибочка вышла</span>
+								</div>
+	
+								<div class="input form__input">
+									<input 
+									type='email'
+									class="input__field"
+									placeholder="E-mail"
+									pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+									<span class="input__error">*Какая-то ошибочка вышла</span>
+								</div>
+							
+								<div class="form__box">
+									<div class="input form__input">
+										<input 
+										type='text'
+										class="input__field"
+										placeholder="Город">
+										<span class="input__error">*Какая-то ошибочка вышла</span>
+									</div>
+									<div class="input form__input">
+										<input 
+										type='number'
+										class="input__field"
+										placeholder="Индекс">
+										<span class="input__error">*Какая-то ошибочка вышла</span>
+									</div>
+								</div>
+								
+								<div class="form__box">
+									<div class="input form__input">
+										<input 
+										type='text'
+										class="input__field"
+										placeholder="Улица">
+										<span class="input__error">*Какая-то ошибочка вышла</span>
+									</div>
+									<div class="input form__input">
+										<input 
+										type='text'
+										class="input__field"
+										placeholder="Дом/корпус">
+										<span class="input__error">*Какая-то ошибочка вышла</span>
+									</div>
+								</div>
+	
+								<div class="policy cart__policy">
+									{{ item.checkbox('Я принимаю условия', 'form__checkbox') }} <a href="#" target="_blank">политики конфиденциальности</a>.
+								</div>	
 			
-		</div>
-		<!-- end cart__wrap -->
+								<div class="cart__box">
+									<button class="button button--default cart__btn">Продолжить</button>
+								</div>
+	
+						</div>					
+					</form>
+			</div><!-- end cart__form -->
+
+		</div><!-- end cart__wrap -->
 
 		<!-- begin empty -->
 		<div class="empty"  style="display: none;">
 			<p>Ваша корзина пуста.</p>
 			<a href="#" class="button button--transparent button--info card__btn--back">Вернуться к покупкам</a>
-		</div>
-		<!-- end empty -->
+		</div><!-- end empty -->
 
 	</div>
 
-</main>	
-<!-- end home cart -->
+</main><!-- end home cart -->
 
 {% endblock %}
