--- a/src/sass/pages/_cart.scss
+++ b/src/sass/pages/_cart.scss
@@ -2,13 +2,22 @@
 	padding-bottom: $gutter*2;
 	border-top: 1px solid $color-border--light;
 
+	&__wrap {
+		@extend %flexColumn;
+	}//.cart__wrap
+
 	&__title, &__item{border-bottom: 1px dashed $color-border;}//.cart__item
 
-	&__items{@extend %flexColumn;}//.cart__items
+	&__items{
+		@extend %flexColumn;
+		@include respond-to(xs) {
+			order: 3;
+		}
+	}//.cart__items
 
 	&__item{
-		margin-bottom: $gutter;
-		padding: $gutter;
+		margin-bottom: 0;
+		padding: $gutter 0 $gutter 10px;
 		@include respond-to(xs) {
 			padding: $gutter 0;
 			margin-bottom: 0;
@@ -17,14 +26,6 @@
 			margin-bottom: 0;
 		}
 	}//.cart__item
-
-	&__box{
-		@extend %flexCenter;
-		justify-content: space-between;
-		@include respond-to(xs) {
-			flex-wrap: wrap;
-		}
-	}//.cart__box
 
 	&__btn{
 		font-size: 15px;
@@ -37,21 +38,46 @@
 		}
 	}//.cart__btn
 
-	&__sum{
+	&__box{
+		padding: $gutter 0;
+		@extend %flexCenter;
+		justify-content: space-between;
+		@include respond-to(xs) {
+			flex-wrap: wrap;
+			order: 1;
+		}
+	}//.cart__box
+
+	&__sum {
+		margin-left: auto;
 		font-family: $f-bold;
 		font-size: 14px;
+		text-align: right;
 
 		@include respond-to(xs) {
 			width: 100%;
-			margin-bottom: $gutter;
+			margin-bottom: 0;
+			text-align: left;
 		}
 
 		&_sale{
+			@include respond-to(xs) {
+				display: flex;
+				align-items: center;
+				span {margin-left: auto;}
+			}
 			span{
 				font-family: $f2-bold;
 				font-size: 18px;
 				color: $color-accent;
-			}			
+			}
+			small{
+				font-family: $f;
+				font-size: 14px;
+				@include respond-to(xs) {
+					margin-left: 5px;
+				}
+			}	
 		}
 
 		&_current{
@@ -61,30 +87,33 @@
 		}
 	}//.cart__sum
 
-	&__policy{margin-bottom: $gutter;}//.cart__policy
-
-	&__form{
-		margin-top: $gutter*2.5;
+	&__form {
+		max-width: 425px;
+		margin: $gutter*2.5 auto 0;
 
 		@include respond-to(xs) {
-			margin-top: $gutter*1.5;
+			max-width: 100%;
+			width: 100%;
+			margin: $gutter auto;
+			order: 2;
 		}
 
-		.form{
-			&__inner{
-				@include row-flex;
+		.form {
+
+			&__inner {
+				flex-direction: column;
 				& > .form__box{
 					&:last-child{
 						@include size-sm(12);
 					}
 				}
 			}
-			&__box{
+
+			&__box {
 				margin-bottom: 0;
-				@include col;
-				@include size(4);
-				@include size-md(6);
-				@include size-xs(12);
+				@include respond-to(xs) {
+					flex-direction: column;
+				}
 
 				&--wide{
 					flex-direction: column;
@@ -112,6 +141,36 @@
 						}						
 					}
 				}
+
+				.form__input {
+					&:first-child {
+						flex: 1;
+						@include respond-to(xs) {
+							width: 100%;
+						}
+					}
+					&:last-child {
+						width: 30%;
+						margin-left: $gutter;
+						@include respond-to(xs) {
+							width: 100%;
+							margin-left: 0;
+						}
+					}
+				}
+			}
+		}
+
+		.cart__btn {
+			width: 100%;
+			height: 43px;
+			line-height: 42px;
+			font-size: 16px;
+		}
+
+		.section-header{
+			.h1{
+				margin: 0 0 $gutter*2 0;
 			}
 		}
 	}//.cart__form
