--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -49,12 +49,12 @@ productDesc:
 							<img itemprop="url contentUrl" src="img/products/atlas/big/{{i+1}}.png" alt="Атлас дюпон «izumrud»">
 							<meta itemprop="name" content="здесь полное описание вплоть до артикула">
 						</div>
-						{% endfor %}﻿						
+						{% endfor %}				
 					</div>
 					<div class="card__slider--nav js-bz-slider--card-nav">
 						{% for i in range(0, 4) %}
 						<div><img src="img/products/atlas/small/{{i+1}}.png" alt="alt"></div>
-						{% endfor %}﻿	
+						{% endfor %}
 					</div>
 				</div>
 			</div>
@@ -129,14 +129,17 @@ productDesc:
 				<!-- end item-select -->
 				
 				<div class="button-box">
-					<button class="button button--yellow card__btn card__btn--cart" onclick= "pushUp();">
+					<button class="button button--yellow card__btn card__btn--cart is-checked" onclick= "pushUp();">
 						Добавить в корзину
 						<span></span>
+						<span title="убрать из корзины"></span>
 					</button>
 
 					<div tooltip="в избранное">
 						<button class="button-icon button-icon--fav js-button-icon--fav card__btn card__btn--fav"></button>
 					</div>
+
+					<span class="card__order-info">В корзине <span>5</span> метров — <span>1694,90 </span>руб.</span>
 				</div>
 
 				<!-- begin card__info -->
