main empty menu fix

--- a/src/templates/data/data.html
+++ b/src/templates/data/data.html
@@ -44,15 +44,18 @@ mainMenu = [
 	},
 	{
 		text: 'Остатки тканей',
-		icon: 'leavings'
+		icon: 'leavings',
+		class: 'nav-main__item--empty'
 	},
 	{
 		text: 'Распродажа',
-		icon: 'sale'
+		icon: 'sale',
+		class: 'nav-main__item--empty'
 	},
 	{
 		text: 'Новинки',
-		icon: 'new'
+		icon: 'new',
+		class: 'nav-main__item--empty'
 	}
 ]
 %}
