--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -108,6 +108,7 @@
 			padding: 0;
 			border-bottom: 1px solid $color-border--lighten;
 		}
+
 		&:hover{
 			@include min-screen(769) {
 				.nav-main{
@@ -118,6 +119,18 @@
 					&__text{color: $color-accent;}
 					&__icon{fill: $color-accent;}
 				}				
+			}
+		}
+
+		&--empty {
+			&:hover {
+				@include min-screen(769) {
+					.nav-main{
+						&__link{
+							&::before{display: none;}
+						}
+					}
+				}
 			}
 		}
 
